--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
         
         <header class="h-16 flex items-center justify-between px-8 border-b border-white/5 backdrop-blur-md sticky top-0 z-10">
             <div class="text-xs font-mono text-gray-500">SYSTEM: <span class="text-green-500">ONLINE</span></div>
-            <div class="text-xs text-gray-400">Model: Quantum Logic Engine v4</div>
+            <div class="text-xs text-gray-400">Model: EGG Engine v1</div>
         </header>
 
         <section id="chatHistory" class="flex-1 overflow-y-auto p-6 md:p-10 pb-32 space-y-10">
             <div id="welcomeMsg" class="max-w-4xl mx-auto text-center py-20 animate-msg">
-                <h2 class="text-4xl heading-font font-bold mb-4">Initialize <span class="neon-text">Logic Sequence</span></h2>
+                <h2 class="text-4xl heading-font font-bold mb-4">Let's boil the <span class="neon-text">EGG</span></h2>
                 <p class="text-gray-500">Enter Boolean expressions to generate Truth Tables, K-Maps, and Circuit Diagrams.</p>
             </div>
         </section>
