--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="truth_table.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EGG Engine | DLD Project</title>
     <script src="https://cdn.tailwindcss.com"></script>
