--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <script src="truth_table.js"></script>
+    <script src="sop_pos.js"></script>
+    <script src="k-map.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EGG Engine | DLD Project</title>
     <script src="https://cdn.tailwindcss.com"></script>
