--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <script src="truth_table.js"></script>
     <script src="sop_pos.js"></script>
+    <script src="ask.js"></script>
     <script src="k-map.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EGG Engine | DLD Project</title>
@@ -82,7 +83,7 @@
                 <div class="w-10 h-10 bg-[#00ffc2] rounded-xl flex items-center justify-center shadow-[0_0_15px_rgba(0,255,194,0.5)]">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" /></svg>
                 </div>
-                <h1 class="heading-font font-bold text-2xl tracking-tighter">LOGIC<span class="neon-text">AI</span></h1>
+                <h1 class="heading-font font-bold text-2xl tracking-tighter">EGG - <span class="neon-text">Engine</span></h1>
             </div>
             <button onclick="clearChat()" class="w-full py-3 px-4 rounded-xl border border-white/10 hover:bg-white/5 transition text-sm flex items-center gap-3 mb-8 text-gray-300">
                 <span class="text-xl">+</span> New Session
@@ -242,6 +243,7 @@
 
         // Main chat handler
         function handleSend() {
+
             const text = logicInput.value.trim();
             if(!text) return;
 
@@ -263,12 +265,13 @@
                     const errorTemp = document.getElementById('errorMsgTemplate').content.cloneNode(true);
                     chatHistory.appendChild(errorTemp);
                 } else {
+                    ask(text);
                     const aiTemp = document.getElementById('aiMsgTemplate').content.cloneNode(true);
                     chatHistory.appendChild(aiTemp);
                 }
                 
                 scrollToBottom();
-            }, 500); // Half a second delay for chat feel
+            }, 500);
         }
 
         function scrollToBottom() {
