Schematic Diagram Generation Created

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="sop_pos.js"></script>
     <script src="ask.js"></script>
     <script src="k-map.js"></script>
+    <script src="schematic.js"></script> <script src="ask.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EGG Engine | DLD Project</title>
     <script src="https://cdn.tailwindcss.com"></script>
