--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
             <div class="text-xs text-gray-400">Model: EGG Engine v1</div>
         </header>
 
-        <section id="chatHistory" class="flex-1 overflow-y-auto p-6 md:p-10 pb-32 space-y-10">
+        <section id="chatHistory" class="flex-1 overflow-y-auto p-6 md:p-10 pb-64 space-y-10">
             <div id="welcomeMsg" class="max-w-4xl mx-auto text-center py-20 animate-msg">
                 <h2 class="text-4xl heading-font font-bold mb-4">Let's boil the <span class="neon-text">EGG</span></h2>
                 <p class="text-gray-500">Enter Boolean expressions to generate Truth Tables, K-Maps, and Circuit Diagrams.</p>
             </div>
         </section>
 
-        <footer class="absolute bottom-0 left-0 right-0 p-6 md:p-8 bg-gradient-to-t from-[#050505] via-[#050505] to-transparent">
+        <footer class="p-6 md:p-8 border-t border-white/5 bg-[#050505]">
             <div class="max-w-4xl mx-auto">
                 <div class="input-container rounded-2xl flex flex-col">
                     <div class="flex items-center px-4 py-2 gap-4">
