Implemented Complex Expression Solving

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
             <div class="card-glass p-8 rounded-2xl">
                 <h3 class="text-[10px] font-bold text-[#00ffc2] uppercase tracking-[0.2em] mb-6">Circuit Schematic Diagram</h3>
-                <div class="w-full h-48 bg-[#030303] border border-dashed border-white/10 rounded-xl flex items-center justify-center relative overflow-hidden">
+                <div class="w-full min-h-[12rem] bg-[#030303] border border-dashed border-white/10 rounded-xl flex items-center justify-center relative p-6">
                     
                     <div class="flex items-center gap-1 z-10">
                         <div class="flex flex-col gap-6 font-mono text-xs text-gray-400 mr-2">
